Traefik-PiHole/Manifest/PiHole/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pihole.mac.tawfiqulbari.work`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
    - match: Host(`pihole.mac.tawfiqulbari.work`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: tawfiqulbari-tls # change to your cert name
